# rust

./: .gitignore  Cargo.toml  readme.md
.devcontainer/: devcontainer.json
crate_diesel_async_ormless_deadpool_quickstart/src/: main.rs
crate_diesel_orm_quickstart/src/utils/: schema.rs
crate_diesel_ormless_quickstart/src/: main.rs
crates/axum-async-diesel-example/: Cargo.toml  samples.env
crates/axum-async-mongo/: Cargo.toml
crates/axum-async-mongo/http/: get_log.http
crates/axum-async-mongo/src/: crud.rs  main.rs  model.rs
crates/axum-mongodb-serde/: Cargo.toml
crates/axum-mongodb-serde/src/: main.rs
crates/crate-axum-nullable-json/: Cargo.toml
crates/crate-axum-nullable-json/src/: main.rs
crates/crate-cron-apalis/: Cargo.toml
crates/crate-cron-apalis-postgres/: Cargo.toml
crates/crate-cron-apalis-postgres/src/: main.rs
crates/crate-cron-apalis/src/: main.rs
crates/crate-cron-postgres/: Cargo.toml
crates/crate-cron-postgres/src/: main.rs
crates/crate-postgres-crud/: Cargo.toml  Dockerfile  compose.yaml  diesel.toml
crates/crate-postgres-crud-jsonb-lib/: Cargo.toml  readme.md
crates/crate-postgres-crud-jsonb-lib-deserialize/: Cargo.toml  compose.yaml  diesel.toml
crates/crate-postgres-crud-jsonb-lib-deserialize/src/: main.rs  models.rs
crates/crate-postgres-crud-jsonb-lib/docs/: diesel.md
crates/crate-postgres-crud-jsonb-lib/sql/: postgres.sql
crates/crate-postgres-crud-jsonb-lib/src/: main.rs  models.rs  schema.rs
crates/crate-postgres-crud/sql/: postgres.sql
crates/crate-postgres-crud/src/: main.rs  schema.rs
crates/crate-postgres-diesel-axum/: Cargo.toml  root.http
crates/crate-postgres-diesel-axum-filters/: Cargo.toml
crates/crate-postgres-diesel-axum-filters/src/: main.rs  schema.rs
crates/crate-postgres-diesel-axum-jsonb/: Cargo.toml  README.md  sample.env
crates/crate-postgres-diesel-axum-jsonb/src/: main.rs  pg_db.rs  schema.rs
crates/crate-postgres-diesel-axum-optional-datetime/: Cargo.toml  create-table.sql  get-json.http  insert-false.http  insert-true.http  insert-without-date-without-bool.http  insert-without-date.http  insert.http
crates/crate-postgres-diesel-axum-optional-datetime/src/: main.rs  schema.rs
crates/crate-postgres-diesel-axum-pool/: .env.sample.neon  Cargo.toml  README.md  root.http  schema.sql
crates/crate-postgres-diesel-axum-pool/http/: list-async.http
crates/crate-postgres-diesel-axum-pool/src/: main.rs
crates/crate-postgres-diesel-axum-pool/stress_test/: index.js  package-lock.json  package.json
crates/crate-postgres-diesel-hello-world/: Cargo.toml
crates/crate-postgres-diesel-hello-world/src/: main.rs  schema.rs
crates/crate_001_hello_world_with_cargo_docker/: Cargo.toml  Dockerfile
crates/crate_001_hello_world_with_cargo_docker/src/: main.rs
crates/crate_001_hello_world_with_cargo_new/: Cargo.toml
crates/crate_002_guessing_game/: Cargo.toml
crates/crate_002_guessing_game/src/: main.rs
crates/crate_002_guessing_game_01/: Cargo.toml
crates/crate_002_guessing_game_02/: Cargo.toml
crates/crate_002_guessing_game_03/: Cargo.toml
crates/crate_002_guessing_game_04/: Cargo.toml
crates/crate_aes_gcm_siv/: Cargo.toml
crates/crate_aes_gcm_siv/src/: main.rs
crates/crate_async_mod/: Cargo.toml
crates/crate_axum_async_diesel_example/: Cargo.toml
crates/crate_axum_async_diesel_example/src/: main.rs
crates/crate_axum_async_mongo/: Cargo.toml
crates/crate_axum_middleware_auth/: Cargo.toml
crates/crate_axum_middleware_auth_automation/: Cargo.toml
crates/crate_axum_middleware_auth_automation/http/: get-protected-fail.http  get-protected.http
crates/crate_axum_middleware_auth_automation/src/: main.rs  protected.rs  public.rs
crates/crate_axum_oauth/: Cargo.toml  token-response.json  token_response-failure.json  user-response.json
crates/crate_axum_oauth/src/: main.rs
crates/crate_axum_seaorm_example/: Cargo.toml  README.md
crates/crate_diesel_async_ormless_bb8_quickstart/: Cargo.toml
crates/crate_diesel_async_ormless_deadpool_quickstart/: Cargo.toml
crates/crate_diesel_orm_quickstart/: Cargo.toml
crates/crate_diesel_ormless_quickstart/: sample.env
crates/crate_encrypt/: Cargo.toml  sample.env
crates/crate_file_io/: Cargo.toml
crates/crate_langchain_llm/: Cargo.toml  sample.env
crates/crate_langchain_tool/: Cargo.toml
crates/crate_langchain_tool/src/: main.rs  my_feature.rs  my_tool.rs
crates/crate_mongodb/: Cargo.toml
crates/crate_mongodb/src/: main.rs  model.rs
crates/crate_mongodb_crud/: Cargo.toml
crates/crate_mongodb_crud/src/: business_logic.rs  crud.rs  db.rs  json.rs  main.rs  model.rs  tests.rs
crates/crate_mongodb_crud/src/models/: database_collection_item.rs  mod.rs  request.rs  response.rs  serialization_error.rs  transform.rs
crates/crate_mongodb_crud_2/: Cargo.toml  playground-1.mongodb.js  readme.md  sample.env
crates/crate_mongodb_crud_2/src/: main.rs  model.rs  tests.rs
crates/crate_mongodb_crud_class/: Cargo.toml  crud.txt.old
crates/crate_mongodb_crud_with_types/: Cargo.toml
crates/crate_mongodb_crud_with_types/src/: crud.rs  main.rs  model.rs
crates/crate_mongodb_optional_datetime/: Cargo.toml
crates/crate_postgres_quickstart/: README.md  sample.env
crates/crate_response_header/: Cargo.toml
crates/crate_response_header_all_routes/: Cargo.toml
crates/crate_response_header_all_routes/src/: main.rs
crates/crate_response_header_specific_route/: Cargo.toml
crates/crates_mongodb/: Cargo.toml  main.rs
crates/neon-rust-async-postgres-example/: Cargo.toml  README.md
crates/neon-rust-example/: Cargo.toml
create_mongodb_optional_datetime/: Cargo.toml  dina.txt
create_mongodb_optional_datetime/src/: main.rs  model.rs.old
dotenvy_quickstart/: sample.env
not-working-yet/crate_diesel_async_ormless_bb8_quickstart/: Cargo.toml
not-working-yet/crate_diesel_async_ormless_bb8_quickstart/src/: main.rs
not-working-yet/crate_diesel_async_ormless_deadpool_quickstart/: Cargo.toml
not-working-yet/crate_postgres_quickstart/: Cargo.toml
not-working-yet/dotenvy_quickstart/: Cargo.toml
(+35 files in other folders)
