[package]
name = "create_mongodb_optional_datetime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_with = { version = "2.3.0", features = ["chrono"] }
bson = { version = "2.3.0", features = ["chrono-0_4", "serde_with"] }
dotenv = "0.15.0"
futures-io = "0.3.21"
futures-core = "0.3.14"
futures-util = { version = "0.3.14", features = ["io"] }
futures-executor = "0.3.14"
futures = "0.3"
chrono = "0.4.34"
mongodb = "2.8.0"
rand = "0.8.4"
thiserror = "1.0.57"
serde_as = "0.0.1"
