[package]
name = "example-hello-world"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
serde = { version = "1.0.208", features = ["derive"] }
serde_derive = "1.0.209"
serde_json = "1.0.127"
axum-extra = { version = "0.9.3", features = ["typed-header"] }