[package]
name = "postgres-example"
version = "0.1.0"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
apalis = { version = "0.6.0", features = ["retry"] }
apalis-sql = { version = "0.6.0", features = ["postgres"] }
serde = "1"
tracing-subscriber = "0.3.11"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["buffer"] }
futures-util = "0.3.0"
serde_json = "1.0"
log = "0.4"
email_address = "0.2.5"

[dependencies.tracing]
default-features = false
version = "0.1"
