[package]
name = "crate-postgres-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.6", features = ["postgres", "chrono", "uuid"] }
dotenvy = "0.15.0"
pq-sys = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.209"
serde_json = "1.0"
tokio = { version = "1.39.3", features = ["full"] }
tower = "0.5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.10.0", features = ["v4","fast-rng", "serde"] }


[[bin]]
name = "server"
path = "src/main.rs"