[package]
name = "crate-postgres-diesel-axum-pool"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.7", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenvy = "0.15.7"
futures = "0.3.31"
pq-sys = "0.6.3"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
serde_json = "1.0.127"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.6.2", features = ["cors", "catch-panic", "sensitive-headers"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5.4"
urlencoding = "2.1.3"
uuid = { version = "1.13.1", features = ["v4","fast-rng", "serde"] }
