[package]
name = "crate_axum_async_diesel_example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
bb8 = "0.8"
diesel = "2"
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }