[package]
name = "crate_langchain_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.127"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.38"
langchain-rust = { version = "4.6.0" }
dotenvy = "0.15.0"
async-trait = "0.1.80"
serde = { version = "1.0", features = ["derive"] }