[package]
name = "crates_mongodb"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.4" }
bson = "2.13.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.0"
futures = "0.3"
futures-core = "0.3.14"
futures-executor = "0.3.14"
futures-io = "0.3.21"
futures-util = { version = "0.3.14", features = ["io"] }
http-body-util = "0.1.0"
mongodb = { version = "3.0.1" }
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
