[package]
name = "crate_mongodb_crud"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.9.0"
dotenv = "0.15.0"
futures-io = "0.3.21"
futures-core = "0.3.14"
futures-util = { version = "0.3.14", features = ["io"] }
futures-executor = "0.3.14"
futures = "0.3"
chrono = "0.4.34"
mongodb = "3.1.1"
rand = "0.8.4"
