[package]
name = "crate_mongodb_crud"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bson = "2.9.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3"
futures-core = "0.3.14"
futures-executor = "0.3.14"
futures-io = "0.3.21"
futures-util = { version = "0.3.14", features = ["io"] }
mongodb = "3.1.1"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
