[package]
name = "crate_mongodb_crud_with_types"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "2.3.0", features = ["chrono"] }
bson = { version = "2.3.0", features = ["chrono-0_4", "serde_with"] }
dotenv = "0.15.0"
futures-io = "0.3.21"
futures-core = "0.3.14"
futures-util = { version = "0.3.14", features = ["io"] }
futures-executor = "0.3.14"
futures = "0.3"
chrono = "0.4.34"
mongodb = "2.8.0"
rand = "0.8.4"
