[package]
name = "crate_diesel_async_ormless_deadpool_quickstart"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.66"

axum-extra = { version = "0.9.3", features = ["typed-header"] }
deadpool = "0.12.1"
diesel = "2.1.0"
diesel-async = { version = "0.3.1", features = ["postgres", "deadpool"] }
dotenvy = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5.0"
tower-http = { version = "0.6.0", features = ["trace"] }
native-tls = "0.2"